<resources>
    <string name="app_name" translatable="false">飞猫云</string>
    <string name="app_jingxuan" translatable="false">鲸选</string>
    <string name="app_feimao" translatable="false">飞猫云</string>
    <string name="app_my" translatable="false">我的</string>
    <string name="complete" translatable="false">完成</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="open_failed" translatable="false">未找到打开此类型文件的应用</string>
    <string name="download_unknown" translatable="false">未知</string>
    <string name="download_retry" translatable="false">重试</string>
    <string name="download_pause" translatable="false">暂停</string>
    <string name="download_resume" translatable="false">继续</string>
    <string name="download_finish" translatable="false">完成</string>
    <string name="download_wait" translatable="false">等待</string>
    <string name="label_download" translatable="false">下载</string>
    <string name="download_date_format" translatable="false">M月d日</string>
    <string name="download_delete_waring" translatable="false">确认删除已下载资源?</string>

    <string name="decompression" translatable="false">解压</string>
    <string name="please_input_password" translatable="false">请输入密码</string>
    <string name="password_is_empty" translatable="false">密码不能为空!!</string>
    <string name="passowrd_error" translatable="false">密码错误，请输入正确的密码</string>
    <string name="ok" translatable="false">确定</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="add_file" translatable="false">新建</string>
    <string name="add_file_no_open" translatable="false">新建文件功能暂未开放，后期更新</string>
    <string name="file_copy_error" translatable="false">文件复制失败</string>
    <string name="un_file_success" translatable="false">解压成功</string>
    <string name="operation_failed" translatable="false">操作失败</string>

    <string name="confirm" translatable="false">确定</string>
    <string name="error_missing_h5_pay_url" translatable="false">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error" translatable="false">错误</string>
    <string name="permission_camera" translatable="false">扫码需要用到拍摄权限</string>
</resources>
